@@ -10,6 +10,7 @@
 * Upgraded to bzip2 1.0.5 (thanks mikejj)
 * Fixed background color of drop-down controls
 * Fixed selection glitches
+* Both up&downloads are disconnected if evil users quit (thanks poy)
 
 -- 0.705 2008-03-14 --
 * Several patches for better *nix compatibility of the core (thanks steven sheehy et al)
